Changelog
=========

2.8 (unreleased)
----------------

Upgrade notes:

1. You will have to install django-sortedm2m - please refer to installation
   instructions.

2. You will need to run the migrations in order to create the new tables for
   the site relations.

List of changes:

- Both models Photo and Gallery now support Django's sites framework.
- Photologue now uses django-sortedm2m to sort photos in a gallery.
- PHOTOLOGUE_USE_CKEDITOR, PHOTOLOGUE_GALLERY_PAGINATE_BY and
  PHOTOLOGUE_PHOTO_PAGINATE_BY are deprecated.
- Major rewrite of zip archive uploader: warn users of files that could not be
  processed, get code to work with Python 3 (issue #71), add extra error
  handling.
- Renamed field title_slug to slug - this allows us to simplify views.py a
  bit.
- Fixed pagination controls for photo list template.
- Tightened naming rules for Photosize names.
- Fixed a couple of unicode-related bugs.
- Added to the documentation pages describing how to customise the admin and
  the views.
- Refactored slightly views.py.

2.7 (2013-10-27)
----------------

Upgrade notes:

1. All settings are now prefixed with ``PHOTOLOGUE_``. Please check that you are
   not affected by this.

List of changes:

- Fixed issue #56, Gallery pagination is broken.
- Photologue now works with Python 3.
- Added a set of templates that work well with Twitter-Bootstrap 3, and used
  them for the 'example_project'.
- Fixed issue #64 (allow installation without installing Pillow).
- Optional use of CKEditor.
- Updated/news translations for Polish, Slovak and German.
- Bugfix: allow viewing latest galleries/latest photos pages even if they
  are empty.
- Started using factory-boy - makes unit tests a bit easier to read.
- Added settings to customise pagination count on list pages.
- Documented all settings.
- All settings are now prefixed with ``PHOTOLOGUE_``.

2.6.1 (2013-05-19)
------------------

List of changes:

- Fixed broken packaging in release 2.6.

2.6 (2013-05-19)